mainActivity and quizActivity created

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
                 <EditText
                     android:id="@+id/ipName"
                     android:layout_width="match_parent"
+
                     android:layout_height="wrap_content"
                     android:hint="@string/app_name"
                     android:inputType="textCapWords"
@@ -83,6 +84,7 @@
                 </EditText>
 
                 <Button
+                    android:id="@+id/btn_start"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
