--- a/app/src/main/res/layout/activity_quiz_questions.xml
+++ b/app/src/main/res/layout/activity_quiz_questions.xml
@@ -1,9 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context=".QuizQuestionsActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/tvQuestion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:textSize="22sp"
+            android:textColor="#363A43"
+            tools:text="What Country this flag belogs to">
+
+        </TextView>
+
+        <ImageView
+            android:id="@+id/tvImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:contentDescription="Quiz Image"
+            tools:src="@drawable/ic_flag_of_denmark">
+
+        </ImageView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginTop="16dp"
+            >
+
+            <ProgressBar
+                android:id="@+id/tvProgressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:indeterminate="false"
+                android:max="9"
+                android:minHeight="50dp"
+                android:progress="0">
+
+            </ProgressBar>
+
+            <TextView
+                android:id="@+id/tvProgress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="15dp"
+                android:textSize="14sp"
+                android:text="0/9">
+
+            </TextView>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvOptionOne"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:background="@drawable/default_option_border_bg"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:textColor="#7A8089"
+            tools:text="India"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/tvOptionTwo"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/default_option_border_bg"
+            android:padding="15dp"
+            android:textColor="#7A8089"
+            tools:text="India"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/tvOptionThree"
+            android:background="@drawable/default_option_border_bg"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:textColor="#7A8089"
+            tools:text="India"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/tvOptionFour"
+            android:background="@drawable/default_option_border_bg"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:textColor="#7A8089"
+            tools:text="India"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            >
+
+        </TextView>
+
+        <Button
+            android:id="@+id/btnSubmit"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="SUBMIT"
+            android:textStyle="bold"
+            android:background="@drawable/default_option_border_bg"/>
+
+
+
+    </LinearLayout>
+
+
+</ScrollView>
